raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image
{
    void *data;  
    int width;   
    int height;  
    int mipmaps; 
    int format;  
} Image;
typedef struct Texture2D
{
    unsigned int id; 
    int width;       
    int height;      
    int mipmaps;     
    int format;      
} Texture2D;
typedef Texture2D TextureCubemap;
typedef struct RenderTexture2D
{
    unsigned int id;   
    Texture2D texture; 
    Texture2D depth;   
    bool depthTexture; 
} RenderTexture2D;
typedef struct Camera3D
{
    Vector3 position; 
    Vector3 target;   
    Vector3 up;       
    float fovy;       
    int type;         
} Camera3D;
    RLAPI void TraceLog(int logType, const char *text, ...);   
    RLAPI void TakeScreenshot(const char *fileName);           
    RLAPI int GetRandomValue(int min, int max);                
    RLAPI bool FileExists(const char *fileName);                       
    RLAPI bool IsFileExtension(const char *fileName, const char *ext); 
    RLAPI const char *GetExtension(const char *fileName);              
    RLAPI const char *GetFileName(const char *filePath);               
    RLAPI const char *GetFileNameWithoutExt(const char *filePath);     
    RLAPI const char *GetDirectoryPath(const char *fileName);          
    RLAPI const char *GetWorkingDirectory(void);                       
    RLAPI char **GetDirectoryFiles(const char *dirPath, int *count);   
    RLAPI void ClearDirectoryFiles(void);                              
    RLAPI bool ChangeDirectory(const char *dir);                       
    RLAPI bool IsFileDropped(void);                                    
    RLAPI char **GetDroppedFiles(int *count);                          
    RLAPI void ClearDroppedFiles(void);                                
    RLAPI long GetFileModTime(const char *fileName);                   
    RLAPI void StorageSaveValue(int position, int value); 
    RLAPI int StorageLoadValue(int position);             
    RLAPI void OpenURL(const char *url); 
    RLAPI bool IsKeyPressed(int key);  
    RLAPI bool IsKeyDown(int key);     
    RLAPI bool IsKeyReleased(int key); 
    RLAPI bool IsKeyUp(int key);       
    RLAPI int GetKeyPressed(void);     
    RLAPI void SetExitKey(int key);    
    RLAPI bool IsGamepadAvailable(int gamepad);                  
    RLAPI bool IsGamepadName(int gamepad, const char *name);     
    RLAPI const char *GetGamepadName(int gamepad);               
    RLAPI bool IsGamepadButtonPressed(int gamepad, int button);  
    RLAPI bool IsGamepadButtonDown(int gamepad, int button);     
    RLAPI bool IsGamepadButtonReleased(int gamepad, int button); 
    RLAPI bool IsGamepadButtonUp(int gamepad, int button);       
    RLAPI int GetGamepadButtonPressed(void);                     
    RLAPI int GetGamepadAxisCount(int gamepad);                  
    RLAPI float GetGamepadAxisMovement(int gamepad, int axis);   
    RLAPI bool IsMouseButtonPressed(int button);          
    RLAPI bool IsMouseButtonDown(int button);             
    RLAPI bool IsMouseButtonReleased(int button);         
    RLAPI bool IsMouseButtonUp(int button);               
    RLAPI int GetMouseX(void);                            
    RLAPI int GetMouseY(void);                            
    RLAPI Vector2 GetMousePosition(void);                 
    RLAPI void SetMousePosition(int x, int y);            
    RLAPI void SetMouseOffset(int offsetX, int offsetY);  
    RLAPI void SetMouseScale(float scaleX, float scaleY); 
    RLAPI int GetMouseWheelMove(void);                    
    RLAPI int GetTouchX(void);                 
    RLAPI int GetTouchY(void);                 
    RLAPI Vector2 GetTouchPosition(int index); 
    RLAPI void SetGesturesEnabled(unsigned int gestureFlags); 
    RLAPI bool IsGestureDetected(int gesture);                
    RLAPI int GetGestureDetected(void);                       
    RLAPI int GetTouchPointsCount(void);                      
    RLAPI float GetGestureHoldDuration(void);                 
    RLAPI Vector2 GetGestureDragVector(void);                 
    RLAPI float GetGestureDragAngle(void);                    
    RLAPI Vector2 GetGesturePinchVector(void);                
    RLAPI float GetGesturePinchAngle(void);                   
    RLAPI void SetCameraMode(Camera camera, int mode); 
    RLAPI void UpdateCamera(Camera *camera);           
    RLAPI void SetCameraPanControl(int panKey);                                                                     
    RLAPI void SetCameraAltControl(int altKey);                                                                     
    RLAPI void SetCameraSmoothZoomControl(int szKey);                                                               
    RLAPI void SetCameraMoveControls(int frontKey, int backKey, int rightKey, int leftKey, int upKey, int downKey); 
    RLAPI void DrawPixel(int posX, int posY, Color color);                                                    
    RLAPI void DrawPixelV(Vector2 position, Color color);                                                     
    RLAPI void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, Color color);                 
    RLAPI void DrawLineV(Vector2 startPos, Vector2 endPos, Color color);                                      
    RLAPI void DrawLineEx(Vector2 startPos, Vector2 endPos, float thick, Color color);                        
    RLAPI void DrawLineBezier(Vector2 startPos, Vector2 endPos, float thick, Color color);                    
    RLAPI void DrawCircle(int centerX, int centerY, float radius, Color color);                               
    RLAPI void DrawCircleSector(Vector2 center, float radius, int startAngle, int endAngle, Color color);     
    RLAPI void DrawCircleGradient(int centerX, int centerY, float radius, Color color1, Color color2);        
    RLAPI void DrawCircleV(Vector2 center, float radius, Color color);                                        
    RLAPI void DrawCircleLines(int centerX, int centerY, float radius, Color color);                          
    RLAPI void DrawRectangle(int posX, int posY, int width, int height, Color color);                         
    RLAPI void DrawRectangleV(Vector2 position, Vector2 size, Color color);                                   
    RLAPI void DrawRectangleRec(Rectangle rec, Color color);                                                  
    RLAPI void DrawRectanglePro(Rectangle rec, Vector2 origin, float rotation, Color color);                  
    RLAPI void DrawRectangleGradientV(int posX, int posY, int width, int height, Color color1, Color color2); 
    RLAPI void DrawRectangleGradientH(int posX, int posY, int width, int height, Color color1, Color color2); 
    RLAPI void DrawRectangleGradientEx(Rectangle rec, Color col1, Color col2, Color col3, Color col4);        
    RLAPI void DrawRectangleLines(int posX, int posY, int width, int height, Color color);                    
    RLAPI void DrawRectangleLinesEx(Rectangle rec, int lineThick, Color color);                               
    RLAPI void DrawTriangle(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                                 
    RLAPI void DrawTriangleLines(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                            
    RLAPI void DrawPoly(Vector2 center, int sides, float radius, float rotation, Color color);                
    RLAPI void DrawPolyEx(Vector2 *points, int numPoints, Color color);                                       
    RLAPI void DrawPolyExLines(Vector2 *points, int numPoints, Color color);                                  
    RLAPI void SetShapesTexture(Texture2D texture, Rectangle source); 
    RLAPI bool CheckCollisionRecs(Rectangle rec1, Rectangle rec2);                                    
    RLAPI bool CheckCollisionCircles(Vector2 center1, float radius1, Vector2 center2, float radius2); 
    RLAPI bool CheckCollisionCircleRec(Vector2 center, float radius, Rectangle rec);                  
    RLAPI Rectangle GetCollisionRec(Rectangle rec1, Rectangle rec2);                                  
    RLAPI bool CheckCollisionPointRec(Vector2 point, Rectangle rec);                                  
    RLAPI bool CheckCollisionPointCircle(Vector2 point, Vector2 center, float radius);                
    RLAPI bool CheckCollisionPointTriangle(Vector2 point, Vector2 p1, Vector2 p2, Vector2 p3);        
    RLAPI Image LoadImage(const char *fileName);                                                       
    RLAPI Image LoadImageEx(Color *pixels, int width, int height);                                     
    RLAPI Image LoadImagePro(void *data, int width, int height, int format);                           
    RLAPI Image LoadImageRaw(const char *fileName, int width, int height, int format, int headerSize); 
    RLAPI void ExportImage(Image image, const char *fileName);                                         
    RLAPI void ExportImageAsCode(Image image, const char *fileName);                                   
    RLAPI Texture2D LoadTexture(const char *fileName);                                                 
    RLAPI Texture2D LoadTextureFromImage(Image image);                                                 
    RLAPI TextureCubemap LoadTextureCubemap(Image image, int layoutType);                              
    RLAPI RenderTexture2D LoadRenderTexture(int width, int height);                                    
    RLAPI void UnloadImage(Image image);                                                               